react video application has been added

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,11 @@
 					c-2.19-1.47-6.44-4.38-6.34-7.68C13,4.49,18.54,1.55,21.57,4.2c3.8,3.33,5.63,10.97,7.01,16.36C25.38,19.04,22.35,17.81,19.23,15.72
 					z M25.11,72.15H6.04V39.08h19.07V72.15z M25.11,36.08H3V25.23h22.11V36.08z M35.12,72.15h-7.06V25.23h7.06V72.15z M57.13,72.15
 					H38.05V39.08h19.07V72.15z M60,36.08H38.05V25.23H60V36.08z"/>
-			</symbol>
+            </symbol>
+            
+            <symbol id="icon-search" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+            </symbol>
         </svg>    
     </body>
     <script>console.log('hello');</script>
