--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>React Lilya App</title>
+        <link href="./css/normalize.css" rel="stylesheet">
+        <link href="./css/ptsans.css" rel="stylesheet">
     </head>
 
     <body>
