--- a/src/index.html
+++ b/src/index.html
@@ -136,5 +136,6 @@
             </symbol>
         </svg>
     </body>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="is_ie.js"></script>
 </html>
